<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">At work</string>
    <string name="no_projects">No projects</string>
    <string name="new_project">New project</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="project_name">Project name:</string>
    <string name="project_name_hint">enter your project name</string>
    <string name="unnamed">Unnamed</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="no_sessions">No sessions</string>
    <string name="from">From:</string>
    <string name="to">To</string>
    <string name="comment">Comment:</string>
    <string name="comment_hint">enter session comment</string>
    <string name="in_progress">in progress...</string>
    <string name="edit_project">Edit project</string>
    <string name="edit_session">Edit session</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="delete_dialog_title">Are you sure you want to delete this project?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="last_active">Last active project</string>
    <string name="choose_project">Select the project</string>
    <string name="loading">Loading...</string>
    <string name="month_total">total</string>
    <string name="week_total">week total</string>
    <string name="hours">hours</string>
</resources>
