<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/atwork_title_bar3">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            style="@style/TitleText" />

        <ProgressBar
            android:id="@+id/pbTitle"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_width="40dip"
            android:layout_height="40dip"></ProgressBar>
    </RelativeLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:id="@+id/cbLastActive"
        android:layout_below="@+id/title_bar"
        android:layout_height="wrap_content"
        android:text="@string/last_active"></CheckBox>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/choose_project"
        android:layout_below="@+id/cbLastActive"
        android:layout_height="wrap_content"
        android:id="@+id/lblChoose"></TextView>
    <ListView
        android:id="@+id/projects_list"
        android:layout_below="@id/lblChoose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000">
    </ListView>
    <TextView
        android:id="@+id/no_projects"
        android:textSize="18sp"
        android:text="@string/no_projects"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_centerInParent="true" />




</RelativeLayout>
