<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/atwork_title_bar3">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            style="@style/TitleText" />

        <ProgressBar
            android:id="@+id/pbTitle"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_width="40dip"
            android:layout_height="40dip"></ProgressBar>
    </RelativeLayout>
    <ListView
        android:id="@+id/projects_list"
        android:layout_below="@id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000">
    </ListView>
    <TextView
        android:id="@+id/no_projects"
        android:textSize="18sp"
        android:text="@string/loading"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_centerInParent="true" />

    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/new_project"
        android:background="@drawable/large_button"
        style="@style/ListButton"
        android:onClick="onNewProject"
        android:id="@+id/newProject"></Button>
</RelativeLayout>
